<resources>
    <string name="app_name">CRC5_logging</string>
    <string name="start_name">Hello World!</string>
    <string name="buttonLeft">Button</string>
    <string name="buttonRight">Button</string>
    <string name="buttonNext">Button</string>
    <string name="textViewSecond">THIS SECOND ACTIVITY OPENED</string>
    <string name="buttonBack">BACK</string>
    <string name="textViewRandom">R</string>
    <string name="textviewTime">time</string>

</resources>